1.2.8.31:
- Update "C&C Tiberium Alliances Flunik Tools: Custom AutoUpgrade" to version 0.5.7.03
- Update "C&C:Tiberium Alliances Maelstrom ADDON Basescanner" to version 1.8.3
- Update "CustomFlunik Tools" to version 20130318c
1.2.8.30:
- Update "CustomFlunik Tools" to version 20130307c
1.2.8.29:
- Update "TACS (Tiberium Alliances Combat Simulator)" to version 2.2
1.2.8.28:
- Update "The Green Cross - Tiberium Alliances Combat Simulator" to version 3.2.2
- Update "Tiberium Alliances Info Sticker" to version 1.11.1
- Add "C&C Tiberium Alliances Flunik Tools: Custom AutoUpgrade" version 0.5.7.02
1.2.8.27:
- Add "CnC:Tiberium Aliances Navigator - Compass" version 1.1.0 (recommended, disables by default)
- Update "CustomFlunik Tools" to version 20130305a
1.2.8.26:
- Update "Tiberium Alliances Info Sticker" to version 1.10
- Remove tracking code from "Maelstrom ADDON Citycolor"
- Update "C&C:TA CNCOpt Link Button" to version 1.7.5 (support new worlds, by anoek)
- Re-add "C&C:Tiberium Alliances Maelstrom ADDON Basescanner" version 1.7.1
1.2.8.25:
- Remove "C&C:Tiberium Alliances Maelstrom ADDON Basescanner"
- Update "Tiberium Alliances Info Sticker" to version 1.9
- Update "CustomFlunik Tools" to version 20130301d
1.2.8.24:
- Update "Tiberium Alliances Info Sticker" to version 1.7.1
1.2.8.23:
- Fix Map KSX-mod (suggested by barius https://github.com/barius)
- Add Spanish translation for  "MaelstromTools Dev" (by rubenlagus https://github.com/rubenlagus)
- Replace "Flunik Tools" with "CustomFlunik Tools" version 20130301a (by towster https://github.com/towster)
1.2.8.22:
- Update "MaelstromTools Dev" to version 0.1.3.1
- Update "Tiberium Alliances Transfer All Resources" to version 1.5.1
- Add "CnC: Tiberium Alliances Info" version 1.0.3
- Add "Tiberium Alliances Info Sticker repair time" version 1.13
1.2.8.21:
- Replace "Flunik Tools" with Infernal's version 0.5.8.infernal
- Update "infernal wrapper" to version 0.390737.5
- Update "MaelstromTools Dev" to version 0.1.3.0