@@ -22,7 +22,7 @@ This extension contains scripts listed bellow:
 - C&C:Tiberium Alliances Coords Button 1.0.1
 - C&C: TA Compass Movable 1.1.0
 - C&C: Tiberium Alliances Chat Helper Enhanced 3.0.0
-- CustomFlunik Tools 20130318c
+- CustomFlunik Tools 20130325d
 - The Green Cross - Tiberium Alliances Combat Simulator 3.2.2
 - Tiberium Alliances PvP/PvE Player Info Mod 1.1
 - The Green Cross - Tiberium Alliances Tools 0.5
