@@ -1,3 +1,4 @@
+- Update "CustomFlunik Tools" to version 20130325d
 1.2.8.31:
 - Update "C&C Tiberium Alliances Flunik Tools: Custom AutoUpgrade" to version 0.5.7.03
 - Update "C&C:Tiberium Alliances Maelstrom ADDON Basescanner" to version 1.8.3
